# FjordLauncher

./: .gitignore  CMakeLists.txt  COPYING.md  README.md  flake.nix
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  rfc.yml  suggestion.yml
.github/workflows/: build.yml  trigger_release.yml  update-flake.yml
buildconfig/: BuildConfig.cpp.in  BuildConfig.h
cmake/: MacOSXBundleInfo.plist.in
doc/: alternative-auth-servers.md
flatpak/: fjordrun  org.prismlauncher.PrismLauncher.yml  org.unmojang.FjordLauncher.yml
launcher/: Application.cpp  Application.h  CMakeLists.txt  CreateAuthlibInjectorAccount.cpp  CreateAuthlibInjectorAccount.h  DataMigrationTask.cpp  DataMigrationTask.h  GetAuthlibInjectorApiLocation.cpp  GetAuthlibInjectorApiLocation.h  InstanceCreationTask.cpp  InstanceImportTask.cpp  InstanceImportTask.h  JavaCommon.cpp  LaunchController.cpp  LaunchController.h  MMCZip.cpp  MMCZip.h  Manifest.cpp  Manifest.h  SysInfo.cpp  main.cpp
launcher/filelink/: FileLink.cpp
launcher/java/: JavaChecker.cpp  JavaChecker.h  JavaInstallList.cpp  JavaUtils.cpp
launcher/java/download/: ManifestDownloadTask.cpp
launcher/launch/: LaunchStep.cpp
launcher/launch/steps/: CheckJava.cpp
launcher/meta/: BaseEntity.cpp  Index.cpp  VersionList.cpp
launcher/minecraft/: Agent.h  ComponentUpdateTask.cpp  ComponentUpdateTask.h  MinecraftInstance.cpp  MinecraftInstance.h  MinecraftLoadAndCheck.cpp  MinecraftLoadAndCheck.h  PackProfile.cpp
launcher/minecraft/auth/: AccountData.cpp  AccountData.h  AccountList.cpp  AccountList.h  AccountTask.h  AuthFlow.cpp  AuthFlow.h  AuthSession.h  MinecraftAccount.cpp  MinecraftAccount.h  Parsers.cpp  Yggdrasil.cpp
launcher/minecraft/launch/: AutoInstallJava.cpp  LauncherPartLaunch.cpp
launcher/minecraft/mod/: ResourceFolderModel.cpp  ResourceFolderModel.h
launcher/minecraft/skins/: CapeChange.cpp  CapeChange.h  SkinDelete.cpp  SkinDelete.h  SkinUpload.cpp  SkinUpload.h
launcher/modplatform/: CheckUpdateTask.h  EnsureMetadataTask.cpp  EnsureMetadataTask.h  ModIndex.cpp  ModIndex.h
launcher/modplatform/flame/: FileResolvingTask.cpp  FlameAPI.cpp  FlameInstanceCreationTask.cpp  FlamePackExportTask.cpp
launcher/modplatform/helpers/: NetworkResourceAPI.cpp
launcher/modplatform/legacy_ftb/: PackInstallTask.cpp
launcher/modplatform/modpacksch/: FTBPackInstallTask.cpp  FTBPackInstallTask.h  FTBPackManifest.cpp  FTBPackManifest.h
launcher/modplatform/modrinth/: ModrinthAPI.cpp  ModrinthCheckUpdate.cpp  ModrinthInstanceCreationTask.cpp  ModrinthPackIndex.cpp
launcher/modplatform/packwiz/: Packwiz.cpp
launcher/net/: ByteArraySink.h  FetchFlameAPIKey.cpp  FetchFlameAPIKey.h  NetJob.cpp  NetJob.h  StaticHeaderProxy.h
launcher/resources/backgrounds/: backgrounds.qrc
launcher/resources/multimc/: index.theme
launcher/screenshots/: ImgurAlbumCreation.cpp
launcher/tasks/: ConcurrentTask.cpp  ConcurrentTask.h  MultipleOptionsTask.cpp  MultipleOptionsTask.h  SequentialTask.cpp  SequentialTask.h  Task.cpp  Task.h
launcher/ui/: GuiUtil.cpp  InstanceWindow.cpp  InstanceWindow.h  MainWindow.cpp  MainWindow.h  MainWindow.ui
launcher/ui/dialogs/: AboutDialog.cpp  AuthlibInjectorLoginDialog.cpp  AuthlibInjectorLoginDialog.h  BlockedModsDialog.cpp  (+9 more)
launcher/updater/: PrismExternalUpdater.cpp
libraries/launcher/: CMakeLists.txt
nix/: README.md  dev.nix  distribution.nix  unwrapped.nix  wrapper.nix
nix/pkg/: default.nix  wrapper.nix
program_info/: CMakeLists.txt  fjordlauncher.6.scd  fjordlauncher.icns  fjordlauncher.manifest.in  fjordlauncher.qrc  fjordlauncher.rc.in  genicons.fjord.sh  org.prismlauncher.PrismLauncher.metainfo.xml.in  org.unmojang.FjordLauncher.desktop.in  org.unmojang.FjordLauncher.metainfo.xml.in  shell.nix  win_install.nsi.in
tests/: CMakeLists.txt  Manifest_test.cpp  Task_test.cpp
(+64 files in other folders)
